# wikiquote-voice-search

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  LICENSE  NLP_PIPELINE_REPORT.md  PARSER_IMPROVEMENTS.md  README.md  REPORT.md  STEP2_ANALYSIS.md  app.py  config.py  docker-compose.yml  extracted_quotes.json  parse_wikitext.py  populate_db.py  pyproject.toml  pytest.ini  requirements.txt  search_service.py  streamlit_app.py  test_autocomplete_tts.py  test_connection.py  test_hybrid_asr.py  user-flow.md
apps/: audio_recorder.py  dialogue_cli.py
backend/: Dockerfile  __init__.py
backend/app/: __init__.py  container.py  deps.py  main.py  search_normalization.py  settings.py  state.py
backend/tests/: test_app_smoke.py  test_asr_provider.py  test_ingest_attribution.py  test_search_normalization.py  test_settings.py
benchmarks/: step1_autocomplete_cases.json
data/: .gitignore
docs/: AUTOCOMPLETE_TTS.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: __init__.py  audit_step1.py  benchmark_step1.py  check_neo4j.py  create_index.py  demo_autocomplete_tts.py  demo_hybrid_asr.py  enroll_user.py  parse_wikitext.py  populate_neo4j.py
services/: asr_service.py  asr_service_hybrid.py  chatbot_service.py  orchestrator.py  speaker_identification.py  tts_service.py  tts_service_simple.py
tests/: test_backend_api.py  test_chatbot_intent.py  test_parse_wikitext.py  test_runtime_devices.py  test_search_heuristics.py  test_tts_service.py
(+78 files in other folders)
