[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "which-quote-backend"
version = "0.1.0"
description = "Canonical FastAPI backend for Which Quote."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.100.0",
  "faster-whisper>=1.1.0",
  "huggingface_hub>=0.23.0",
  "kokoro-onnx>=0.4.0,<0.5.0",
  "lxml>=4.9.0",
  "mwparserfromhell>=0.6.0",
  "neo4j>=5.0.0",
  "numpy>=1.24.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "resemblyzer>=0.1.1.dev0",
  "scikit-learn>=1.3.0",
  "scipy>=1.11.0",
  "soundfile>=0.12.0",
  "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]
mlx = [
  "mlx-whisper>=0.4.0",
]

[tool.setuptools]
packages = [
  "backend",
  "backend.app",
  "backend.app.api",
  "backend.app.api.routers",
  "backend.app.api.schemas",
  "backend.app.cli",
  "backend.app.core",
  "backend.app.integrations",
  "backend.app.integrations.audio",
  "backend.app.services",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "frontend/tests"]

[project.scripts]
which-quote-ingest = "backend.app.cli.ingest:main"
which-quote-maintenance = "backend.app.cli.maintenance:main"
which-quote-users = "backend.app.cli.users:main"
